[ Callout ] » Código refactorizado

--- a/index.html
+++ b/index.html
@@ -130,21 +130,37 @@
                     <i class="icono fa fa-gavel" aria-hidden="true"></i>
                     <h5 class="titulo">Luchadora</h5>
                     <p class="texto">No me rindo fácilmente. Ante cualquier adversidad vivida he conseguido salir adelante y aprender de la experiencia</p>
+                    <div class="arrow-wrapperr">
+                        <div class="left-arrow"></div>
+                        <div class="right-arrow"></div>
+                    </div>
                 </div>
                 <div class="tarjeta">
                     <i class="icono fa fa-balance-scale" aria-hidden="true"></i>
                     <h5 class="titulo">Perfeccionista</h5>
                     <p class="texto">Todo el que me conoce sabe que siempre doy lo mejor de mí misma. Es fruto natural cuando te apasiona tu trabajo</p>
+                    <div class="arrow-wrapperr">
+                        <div class="left-arrow"></div>
+                        <div class="right-arrow"></div>
+                    </div>
                 </div>
                 <div class="tarjeta">
                     <i class="icono fa fa-handshake-o" aria-hidden="true"></i>
                     <h5 class="titulo">Incondicional</h5>
                     <p class="texto">Me enfoco principalmente en las necesidades del cliente. Soy una persona leal y fiel a la política de la empresa</p>
+                    <div class="arrow-wrapperr">
+                        <div class="left-arrow"></div>
+                        <div class="right-arrow"></div>
+                    </div>
                 </div>
                 <div class="tarjeta">
                     <i class="icono fa fa-bank" aria-hidden="true"></i>
                     <h5 class="titulo">Ambiciosa</h5>
                     <p class="texto">Mi meta está en el horizonte: siempre se puede hacer mejor, por lo que mi trabajo es un aprendizaje constante</p>
+                    <div class="arrow-wrapperr">
+                        <div class="left-arrow"></div>
+                        <div class="right-arrow"></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -156,7 +172,7 @@
     <!-- ─────────────── -->
 
     <aside id="callout">
-        <p class="wow fadeIn">Cuando no sepas <span>cómo</span> iniciar, continuar o finalizar un procedimiento judicial, acude a la <span>Ley Procesal</span></p>
+        <p class="texto wow fadeIn">Cuando no sepas <span>cómo</span> iniciar, continuar o finalizar un procedimiento judicial, acude a la <span>Ley Procesal</span></p>
         <div class="overlay"></div>
     </aside>
 
