[ Bienvenida ] » Es responsive

--- a/index.html
+++ b/index.html
@@ -119,48 +119,32 @@
     <!-- ────────────────── -->
 
     <section id="bienvenida" class="text-center wow fadeIn">
-        <div class="container">
+        <div class="container z-index-50">
             <h2 class="wow fadeIn">Bienvenido</h2>
             <hr>
             <p>
                 Mi nombre es Soledad Poveda Montesdeoca. Estoy <strong>licenciada en Derecho</strong> por La Universidad de Las Palmas de Gran Canaria y cuento con <strong>más de 4 años de experiencia laboral</strong>. Me apasiona el estudio del <strong>Derecho Procesal</strong> en cualquiera de sus órdenes: su conocimiento es fundamental y necesario en todo procedimiento judicial. Esta pasión, unida al trabajo escrito, la investigación jurídica y el estudio constante, son los ingredientes incondicionales para dar soporte a letrados como <strong>licenciada en Derecho</strong>, esto es, como <strong>asistente legal</strong> o <strong>paralegal</strong>.
             </p>
             <div class="tarjetas">
-                <div class="tarjeta">
+                <div class="tarjeta wow fadeIn">
                     <i class="icono fa fa-gavel" aria-hidden="true"></i>
                     <h5 class="titulo">Luchadora</h5>
                     <p class="texto">No me rindo fácilmente. Ante cualquier adversidad vivida he conseguido salir adelante y aprender de la experiencia</p>
-                    <div class="arrow-wrapperr">
-                        <div class="left-arrow"></div>
-                        <div class="right-arrow"></div>
-                    </div>
                 </div>
-                <div class="tarjeta">
+                <div class="tarjeta wow fadeIn" data-wow-delay=".25s">
                     <i class="icono fa fa-balance-scale" aria-hidden="true"></i>
                     <h5 class="titulo">Perfeccionista</h5>
                     <p class="texto">Todo el que me conoce sabe que siempre doy lo mejor de mí misma. Es fruto natural cuando te apasiona tu trabajo</p>
-                    <div class="arrow-wrapperr">
-                        <div class="left-arrow"></div>
-                        <div class="right-arrow"></div>
-                    </div>
                 </div>
-                <div class="tarjeta">
+                <div class="tarjeta wow fadeIn" data-wow-delay=".5s">
                     <i class="icono fa fa-handshake-o" aria-hidden="true"></i>
                     <h5 class="titulo">Incondicional</h5>
                     <p class="texto">Me enfoco principalmente en las necesidades del cliente. Soy una persona leal y fiel a la política de la empresa</p>
-                    <div class="arrow-wrapperr">
-                        <div class="left-arrow"></div>
-                        <div class="right-arrow"></div>
-                    </div>
                 </div>
-                <div class="tarjeta">
+                <div class="tarjeta wow fadeIn" data-wow-delay=".75s">
                     <i class="icono fa fa-bank" aria-hidden="true"></i>
                     <h5 class="titulo">Ambiciosa</h5>
                     <p class="texto">Mi meta está en el horizonte: siempre se puede hacer mejor, por lo que mi trabajo es un aprendizaje constante</p>
-                    <div class="arrow-wrapperr">
-                        <div class="left-arrow"></div>
-                        <div class="right-arrow"></div>
-                    </div>
                 </div>
             </div>
         </div>
