[ Experiencia ] » Es responsive

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!--     HEADER     -->
     <!-- ────────────── -->
 
-    <header>
+    <header class="hidden">
         <div class="overlay"></div>
         <img class="logo" src="img/logo.png" alt="Logotipo">
         <h1>Soledad Poveda<span class="subtitle">Asistente Legal</span></h1>
@@ -164,40 +164,32 @@
     <!--     EXPERIENCE     -->
     <!-- ────────────────── -->
 
-    <section id="experience">
+    <section id="experiencia">
         <div class="container">
-
-            <!-- Heading -->
             <h2 class="wow fadeIn">Experiencia</h2>
             <hr>
-
-            <!-- Items -->
             <div class="row">
-                <div class="col-xs-10 col-xs-offset-0 col-sm-6 col-sm-offset-0">
-                    <div class="wrapper wow fadeIn">
-                        <span class="company">Baltar y Asociados S.L.P.</span>
-                        <span class="job">Asistencia Legal</span>
+                <div class="col-xs-12 col-sm-6">
+                    <div class="item wow fadeIn">
+                        <span class="empresa">Baltar y Asociados S.L.P.</span>
                         <div  class="overlay"></div>
                     </div>
                 </div>
-                <div class="col-xs-10 col-xs-offset-0 col-sm-6 col-sm-offset-0">
-                    <div class="wrapper wow fadeIn" data-wow-delay=".25s">
-                        <span class="company">Agencia Robla S.L.</span>
-                        <span class="job">Administración</span>
+                <div class="col-xs-12 col-sm-6">
+                    <div class="item wow fadeIn" data-wow-delay=".25s">
+                        <span class="empresa">Agencia Robla S.L.</span>
                         <div  class="overlay"></div>
                     </div>
                 </div>
-                <div class="col-xs-10 col-xs-offset-0 col-sm-6 col-sm-offset-0">
-                    <div class="wrapper wow fadeIn" data-wow-delay=".5s">
-                        <span class="company">Indemnización Garantizada</span>
-                        <span class="job">Administración</span>
+                <div class="col-xs-12 col-sm-6">
+                    <div class="item wow fadeIn" data-wow-delay=".5s">
+                        <span class="empresa">Indemnización Garantizada</span>
                         <div  class="overlay"></div>
                     </div>
                 </div>
-                <div class="col-xs-10 col-xs-offset-0 col-sm-6 col-sm-offset-0">
-                    <div class="wrapper wow fadeIn" data-wow-delay=".75s">
-                        <span class="company">Cabildo de Gran Canaria</span>
-                        <span class="job">Asistencia Jurídica</span>
+                <div class="col-xs-12 col-sm-6">
+                    <div class="item wow fadeIn" data-wow-delay=".75s">
+                        <span class="empresa">Cabildo de Gran Canaria</span>
                         <div  class="overlay"></div>
                     </div>
                 </div>
@@ -209,7 +201,7 @@
     <!--     TESTIMONIALS     -->
     <!-- ──────────────────── -->
 
-    <section id="testimonials">
+    <section id="testimonials" class="hidden">
         <div class="overlay"></div>
 
         <!-- Testimonial -->
@@ -257,7 +249,7 @@
     <!--     TRAINING     -->
     <!-- ──────────────── -->
 
-    <section id="training">
+    <section id="training" class="hidden">
         <div class="overlay"></div>
         <h2 class="wow fadeIn">Formación</h2>
         <hr>
@@ -430,7 +422,7 @@
     <!--     HOBBIES     -->
     <!-- ─────────────── -->
 
-    <section id="hobbies" class="text-center">
+    <section id="hobbies" class="text-center hidden">
         <div class="hobbie">
             <div class="overlay">
                 <p>Senderismo</p>
@@ -504,7 +496,7 @@
     <!--     FOOTER     -->
     <!-- ────────────── -->
 
-    <footer>
+    <footer class="hidden">
         <div class="rrss">
             <a class="rrss facebook" href="#" title="Perfil oficial de Facebook">
                 <i class="fa fa-fw fa-facebook" aria-hidden="true"></i>
