[ JS ] » Código refactorizado

--- a/index.html
+++ b/index.html
@@ -62,25 +62,25 @@
 
     <nav>
         <div class="item">
-            <a class="page-scroll" href="#welcome">
+            <a class="smooth-scrolling" href="#bienvenida">
                 <i class="fa fa-home fa-fw" aria-hidden="true"></i>
                 <p>Bienvenido</p>
             </a>
         </div>
         <div class="item">
-                <a class="page-scroll" href="#experience">
-                    <i class="fa fa-briefcase fa-fw" aria-hidden="true"></i>
-                    <p>Experiencia</p>
-                </a>
-            </div>
+            <a class="smooth-scrolling" href="#experiencia">
+                <i class="fa fa-briefcase fa-fw" aria-hidden="true"></i>
+                <p>Experiencia</p>
+            </a>
+        </div>
         <div class="item">
-            <a class="page-scroll" href="#training">
+            <a class="smooth-scrolling" href="#formacion">
                 <i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>
                 <p>Formación</p>
             </a>
         </div>
         <div class="item">
-            <a class="page-scroll" href="#contact">
+            <a class="smooth-scrolling" href="#contacto">
                 <i class="fa fa-paper-plane fa-fw" aria-hidden="true"></i>
                 <p>Contacto</p>
             </a>
@@ -471,26 +471,6 @@
         <div class="overlay"></div>
     </section>
 
-    <!-- ───────────────── -->
-    <!--     INTERESTS     -->
-    <!-- ───────────────── -->
-
-    <section id="interests" class="text-center wow fadeIn">
-        <div class="overlay"></div>
-        <div class="hexagon">
-            <img src="img/hobbies/astronomy.png" alt="">
-            <span class="shadow"></span>
-        </div>
-        <div class="hexagon">
-            <img src="img/hobbies/hiking.png" alt="">
-            <span class="shadow"></span>
-        </div>
-        <div class="hexagon">
-            <img src="img/hobbies/cupcake.png" alt="">
-            <span class="shadow"></span>
-        </div>
-    </section>
-
     <!-- ────────────── -->
     <!--     FOOTER     -->
     <!-- ────────────── -->
@@ -520,20 +500,20 @@
     <!--     JS     -->
     <!-- ────────── -->
 
-    <!-- jQuery CDN -->
+      <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 
     <!-- Bootstrap JS CDN -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <!-- WOW -->
-    <script src="js/animations/wow.min.js"></script>
+    <!-- jQuery Easing CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 
-    <!-- Scrolling navbar -->
-    <script src="js/scrolling/jquery.easing.min.js"></script>
-    <script src="js/scrolling/scrolling-nav.js"></script>
+    <!-- WOW -->
+    <script src="js/wow.min.js"></script>
 
     <!-- Local -->
     <script src="js/functions.js"></script>
+
 </body>
 </html>
