[ Footer ] » Es responsive

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body id="top">
 
     <!-- Top Button -->
-    <a class="top-button page-scroll" href="#top" title="Volver arriba">
+    <a class="top-button smooth-scrolling" href="#top" title="Volver arriba">
         <i class="fa fa-angle-up" aria-hidden="true"></i>
     </a>
 
@@ -95,7 +95,7 @@
         <div class="overlay"></div>
         <img class="logo" src="img/logo.png" alt="Logotipo">
         <h1>Soledad Poveda<span class="subtitle">Asistente Legal</span></h1>
-        <a class="page-scroll" href="#welcome" title="Saber más">
+        <a class="smooth-scrolling" href="#welcome" title="Saber más">
             <i class="fa fa-angle-down" aria-hidden="true"></i>
         </a>
         <span class="contact-data">
@@ -475,24 +475,14 @@
     <!--     FOOTER     -->
     <!-- ────────────── -->
 
-    <footer class="hidden">
-        <div class="rrss">
-            <a class="rrss facebook" href="#" title="Perfil oficial de Facebook">
-                <i class="fa fa-fw fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a class="rrss twitter" href="https://twitter.com/canparalegal" title="Perfil oficial de Twitter">
-                <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a class="rrss linkedin" href="#" title="Perfil oficial de LinkedIn">
-                <i class="fa fa-fw fa-linkedin" aria-hidden="true"></i>
-            </a>
-        </div>
+    <footer>
         <div class="legal">
             <a href="legal.html">Política de privacidad</a>
             <a href="cookies.html">Política de cookies</a>
         </div>
         <div class="copyright">
-            <p>&copy; Soledad Poveda <span>Paralegal</span></p>
+            &copy; Soledad Poveda <span>Paralegal</span>
+            <div class="overlay"></div>
         </div>
     </footer>
 
