[ Testimonios ] » Es responsive

--- a/index.html
+++ b/index.html
@@ -197,52 +197,44 @@
         </div>
     </section>
 
-    <!-- ──────────────────── -->
-    <!--     TESTIMONIALS     -->
-    <!-- ──────────────────── -->
+    <!-- ─────────────────── -->
+    <!--     TESTIMONIOS     -->
+    <!-- ─────────────────── -->
 
-    <section id="testimonials" class="hidden">
-        <div class="overlay"></div>
+    <section id="testimonios">
 
         <!-- Testimonial -->
-        <div class="wow fadeIn">
-            <div class="testimonial-wrapper active" data-position="1">
-                <span class="testimonial">
+        <div class="testimonios z-index-50 wow fadeIn">
+            <div>
+                <div class="testimonio activo" data-position="1">
                     <i class="quotes fa fa-fw fa-quote-left" aria-hidden="true"></i>
                     Soledad es una magnífica profesional. Siempre tiene una sonrisa que brindar a los demás y afronta los problemas con optimismo. Por otro lado, su trabajo es impecable.
                     <i class="quotes fa fa-fw fa-quote-right" aria-hidden="true"></i>
-                </span>
-                <p class="author">Jessica Camarda</p>
-                <span class="border border-left" ></span>
-                <span class="border border-right"></span>
-            </div>
-            <div class="testimonial-wrapper" data-position="2">
-                <span class="testimonial">
+                    <p class="author">Jessica Camarda</p>
+                </div>
+                <div class="testimonio" data-position="2">
                     <i class="quotes fa fa-fw fa-quote-left" aria-hidden="true"></i>
                     Si buscas asistencia legal, ella es la persona indicada sin lugar a dudas. Tuve el placer de trabajar junto a ella y puedo decir que sus escritos eran intachables.
                     <i class="quotes fa fa-fw fa-quote-right" aria-hidden="true"></i>
-                </span>
-                <p class="author">David Del Pino</p>
-                <span class="border border-left" ></span>
-                <span class="border border-right"></span>
-            </div>
-            <div class="testimonial-wrapper" data-position="3">
-                <span class="testimonial">
+                    <p class="author">David Del Pino</p>
+                </div>
+                <div class="testimonio" data-position="3">
                     <i class="quotes fa fa-fw fa-quote-left" aria-hidden="true"></i>
                     Perfeccionista, exigente, resolutiva... son solo unos pocos adjetivos que la describen profesionalmente. Es una aportación imprescindible en todo despacho que se precie.
                     <i class="quotes fa fa-fw fa-quote-right" aria-hidden="true"></i>
-                </span>
-                <p class="author">Lorena Martel</p>
-                <span class="border border-left" ></span>
-                <span class="border border-right"></span>
+                    <p class="author">Lorena Martel</p>
+                </div>
             </div>
+            <span class="border border-left" ></span>
+            <span class="border border-right"></span>
         </div>
         
         <!-- Navigation -->
-        <span class="navigation navigation-left" ><i class="arrow fa fa-fw fa-angle-left " aria-hidden="true"></i></span>
-        <span class="navigation navigation-right"><i class="arrow fa fa-fw fa-angle-right" aria-hidden="true"></i></span>
+        <span class="navigation navigation-left  z-index-50"><i class="flecha fa fa-fw fa-angle-left " aria-hidden="true"></i></span>
+        <span class="navigation navigation-right z-index-50"><i class="flecha fa fa-fw fa-angle-right" aria-hidden="true"></i></span>
 
-        <!-- Dots -->
+        <div class="overlay"></div>
+
     </section>
 
     <!-- ──────────────── -->
@@ -477,8 +469,8 @@
 
     <footer>
         <div class="legal">
-            <a href="legal.html">Política de privacidad</a>
             <a href="cookies.html">Política de cookies</a>
+            <a href="legal.html">Política de privacidad</a>
         </div>
         <div class="copyright">
             &copy; Soledad Poveda <span>Paralegal</span>
