[ Header ] » Error de maquetación solucionado

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!--     NAVBAR     -->
     <!-- ────────────── -->
 
-    <nav class="hidden">
+    <nav>
         <div class="item">
             <a class="smooth-scrolling" href="#bienvenida">
                 <i class="fa fa-home fa-fw" aria-hidden="true"></i>
