[ Navbar ] » Es responsive

--- a/index.html
+++ b/index.html
@@ -61,30 +61,22 @@
     <!-- ────────────── -->
 
     <nav>
-        <div class="item">
-            <a class="smooth-scrolling" href="#bienvenida">
-                <i class="fa fa-home fa-fw" aria-hidden="true"></i>
-                <p>Bienvenido</p>
-            </a>
-        </div>
-        <div class="item">
-            <a class="smooth-scrolling" href="#experiencia">
-                <i class="fa fa-briefcase fa-fw" aria-hidden="true"></i>
-                <p>Experiencia</p>
-            </a>
-        </div>
-        <div class="item">
-            <a class="smooth-scrolling" href="#formacion">
-                <i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>
-                <p>Formación</p>
-            </a>
-        </div>
-        <div class="item">
-            <a class="smooth-scrolling" href="#contacto">
-                <i class="fa fa-paper-plane fa-fw" aria-hidden="true"></i>
-                <p>Contacto</p>
-            </a>
-        </div>
+        <a class="item smooth-scrolling" href="#bienvenida">
+            <i class="icono fa fa-user fa-fw" aria-hidden="true"></i>
+            <span class="texto">Bienvenido</span>
+        </a>
+        <a class="item smooth-scrolling" href="#experiencia">
+            <i class="icono fa fa-briefcase fa-fw" aria-hidden="true"></i>
+            <span class="texto">Experiencia</span>
+        </a>
+        <a class="item smooth-scrolling" href="#formacion">
+            <i class="icono fa fa-graduation-cap fa-fw" aria-hidden="true"></i>
+            <span class="texto">Formación</span>
+        </a>
+        <a class="item smooth-scrolling" href="#contacto">
+            <i class="icono fa fa-envelope fa-fw" aria-hidden="true"></i>
+            <span class="texto">Contacto</span>
+        </a>
     </nav>
 
     <!-- ────────────── -->
@@ -169,9 +161,9 @@
         <div class="overlay ruido"></div>
     </aside>
 
-    <!-- ────────────────── -->
-    <!--     EXPERIENCE     -->
-    <!-- ────────────────── -->
+    <!-- ─────────────────── -->
+    <!--     EXPERIENCIA     -->
+    <!-- ─────────────────── -->
 
     <section id="experiencia">
         <div class="container">
@@ -246,11 +238,12 @@
 
     </section>
 
-    <!-- ──────────────── -->
-    <!--     TRAINING     -->
-    <!-- ──────────────── -->
+    <!-- ───────────────── -->
+    <!--     FORMACIÓN     -->
+    <!-- ───────────────── -->
 
-    <section id="training" class="hidden">
+    <section id="formacion"></section>
+    <section id="formacions" class="hidden">
         <div class="overlay"></div>
         <h3 class="wow fadeIn">Formación</h3>
         <hr>
